--- a/nicepage.css
+++ b/nicepage.css
@@ -34431,21 +34431,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-text-2 {
-  margin: -88px 141px 0 582px;
-}
-
-.u-footer .u-btn-1 {
-  background-image: none;
-  font-size: 0.875rem;
-  margin: 9px 509px 0 auto;
-  padding: 0;
-}
-
-.u-footer .u-btn-2 {
-  background-image: none;
-  font-size: 0.875rem;
-  margin: -22px 398px 60px auto;
-  padding: 0;
+  margin: -88px 141px 60px 582px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-text-1 {
@@ -34458,14 +34444,6 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -88px;
     margin-right: 41px;
     margin-left: 482px;
-  }
-
-  .u-footer .u-btn-1 {
-    margin-right: 409px;
-  }
-
-  .u-footer .u-btn-2 {
-    margin-right: 291px;
   }
 }
 @media (max-width: 991px) {
@@ -34486,16 +34464,6 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 303px;
     margin-left: 0;
   }
-
-  .u-footer .u-btn-1 {
-    margin-top: 29px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-footer .u-btn-2 {
-    margin: 0 auto 51px 0;
-  }
 }
 @media (max-width: 767px) {
   .u-footer .u-text-1 {
@@ -34504,10 +34472,6 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-footer .u-text-2 {
     margin-right: 123px;
-  }
-
-  .u-footer .u-btn-1 {
-    margin-right: 491px;
   }
 }
 @media (max-width: 575px) {
@@ -34523,16 +34487,6 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-text-2 {
     margin-top: 16px;
     margin-right: 0;
-  }
-
-  .u-footer .u-btn-1 {
-    margin-top: 26px;
-    margin-right: auto;
-  }
-
-  .u-footer .u-btn-2 {
-    margin-top: 4px;
-    margin-bottom: 48px;
   }
 }
 
